projects/examples/source/09.01.02.cpp
////////////////////////////////////////////

#include <cassert>
#include <memory>

////////////////////////////////////////////

int main()
{
	std::shared_ptr < int > x1(new auto(2));

	std::shared_ptr < int > x2 = x1;

//  ----------------------------------------

	assert(x1.use_count() == 2 && *x1 == 2);

	assert(x2.use_count() == 2 && *x2 == 2);

//  ----------------------------------------

	x2.reset(new auto(3));

//  ----------------------------------------

	assert(x1.use_count() == 1 && *x1 == 2);

	assert(x2.use_count() == 1 && *x2 == 3);

//  ----------------------------------------

	auto x3 = new auto(1);

//  ----------------------------------------

	std::shared_ptr < int > x4(x3);

//  ----------------------------------------

	assert(x4.use_count() == 1 && *x4 == 1);

//  ----------------------------------------

//	delete x3; // error
}

////////////////////////////////////////////